--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "firebase": "^9.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.9.3",
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.8.2",
     "vite-plugin-pwa": "^0.14.4"
   },
   "devDependencies": {
