--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^9.17.2",
     "react": "^18.2.0",
+    "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
     "react-firebase-hooks": "^5.1.1",
