--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "firebase": "^9.17.2",
+    "ics": "^3.1.0",
     "react": "^18.2.0",
     "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
